snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1.jar.md5
7683b7813a2a8402ca3a915647d64a35